fix overflowing image using automargin, get rid of absolute positioning

--- a/RockPaperScissors.css
+++ b/RockPaperScissors.css
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
+    min-height: 100vh;
+    flex: 1;
+    
+    
 }
 .box {
     height: 25%;
@@ -47,10 +51,9 @@ button {
 
 .imageBox{
     display: flex;
-    position: absolute;
-    bottom: 0;
     align-self: center;
-    justify-self: center;
+    justify-self: flex-end;
+    margin-top: auto;
 }
 
 .rps {
